--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li class="scroll-to-section"><a href="#fitur" class="active">Home</a></li>
+                            <li class="scroll-to-section"><a href="https://stats.uptimerobot.com/KzBV3Uqgmn" class="active">Status</a></li>
                             <li class="main-button"><a href="http://discord.warnetgame.xyz">Discord</a></li>
                             
                             
